working on fx examples